--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,20 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.divtwoji {
+    display: grid;
+    width: 50%;
+    grid-gap: 10%;
+    margin: auto;
+    font-size: 1.2em;
+    padding: 4em;
+    grid-template-columns: 45% 45%;
+}
+
+@media (max-width:600px) {
+    .divtwoji {
+        width: 100%;
+        padding: 1em;
+    }
+}
