--- a/styles/pinterestgrid.module.css
+++ b/styles/pinterestgrid.module.css
@@ -1,46 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-* {
-    padding: 0%;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto',
-        sans-serif;
-}
-
-.divtwoji {
-    display: grid;
-    width: 50%;
-    grid-gap: 10%;
-    margin: auto;
-    font-size: 1.2em;
-    padding: 4em;
-    grid-template-columns: 45% 45%;
-}
-
-@media (max-width:600px) {
-    .divtwoji {
-        width: 100%;
-        padding: 1em;
-    }
-}
-
-
-
-/* another */
-
 .grid {
     width: 100%;
     columns: 5;
     padding: 2em;
 }
 
-.grid-item {
+.grid_item {
     width: 100%;
     position: relative;
 }
 
-.grid-item img {
+.grid_item img {
     width: 100%;
     height: auto;
     border-radius: 1em;
