--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,102 +29,28 @@
 
 /* another */
 
-.grid {
-    width: 100%;
-    columns: 5;
-    padding: 2em;
+.instagramlayout {
+    width: 70%;
+    margin: auto;
 }
 
-.grid-item {
-    width: 100%;
-    position: relative;
+.instagrid {
+    column-count: 3;
+    column-gap: 20px;
 }
 
-.grid-item img {
+.imgshort img {
     width: 100%;
-    height: auto;
-    border-radius: 1em;
     margin-bottom: 1em;
+    height: 300px;
+    object-fit: cover;
+    object-position: center;
 }
 
-.showinneritems {
-    position: absolute;
-    padding: 1em;
-    top: 0;
-    z-index: 1;
-    color: white;
-    bottom: 0;
-    background: #2424229a;
-    left: 0;
-    right: 0;
-    margin-bottom: 1.2em;
-    border-radius: 1em;
+.imgshort .stats {
+    display: none;
 }
 
-
-.save {
-    background: red;
-    width: fit-content;
-    padding: .5em 1em;
-    border-radius: 1em;
-    font-weight: bold;
-    float: right;
-}
-
-.bottomgroup {
-    position: absolute;
-    bottom: .5em;
-    display: flex;
-    gap: 4%;
-    justify-content: space-between;
-    width: -webkit-fill-available;
-    margin-right: 1em;
-    margin-bottom: .5em;
-}
-
-.Link,
-.share,
-.more {
-    background: white;
-    color: black;
-    padding: .5em 1em;
-    border-radius: 1em;
-}
-
-.childDiv {
-    display: flex;
-    justify-content: center;
-    gap: 8%;
-}
-
-.more img,
-.Link img,
-.share img {
-    width: 20px;
-    margin: 0;
-}
-
-
-@media (min-width:900px) and (max-width:1200px) {
-    .grid {
-        width: 100%;
-        columns: 3;
-        padding: 2em;
-    }
-}
-
-@media (min-width:600px) and (max-width:900px) {
-    .grid {
-        width: 100%;
-        columns: 2;
-        padding: 2em;
-    }
-}
-
-@media (max-width:600px) {
-    .grid {
-        width: 100%;
-        columns: 1;
-        padding: 2em;
-    }
+.imgshort.itstrue .stats {
+    display: block;
 }
