--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
 
 /* another */
 
-/* .instagramlayout {
+.instagramlayout {
     width: 70%;
     margin: auto;
 }
@@ -53,4 +53,7 @@
 
 .imgshort.itstrue .stats {
     display: block;
-} */
+}
+
+
+/* klasgd */
