--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     font-family: 'Roboto',
         sans-serif;
-    -webkit-tap-highlight-color: transparent;
+    /* -webkit-tap-highlight-color: transparent; */
 }
 
 .divtwoji {
