--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -1,14 +1,42 @@
+.themenu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: .4em 2em;
+    position: relative;
+}
+
+.logo img {
+    width: 2em;
+}
+
+
 .nav {
     display: flex;
     list-style: none;
     padding: 1em;
     gap: 5%;
+    justify-content: flex-end;
+}
+
+.menu {
+    margin: 0;
 }
 
 .submenu_close {
     display: none;
     max-height: 0;
     transition: max-height 0.5s ease-in-out;
+}
+
+.menua a {
+    text-decoration: none;
+    color: black;
+}
+
+.menua a:hover {
+    text-decoration: underline;
+    color: black;
 }
 
 .submenu_open {
@@ -64,13 +92,74 @@
     text-decoration: none;
 }
 
+.mobilemenubtn {
+    display: none;
+}
+
+
+@media (min-width:600px) {
+    .menu {
+        width: 90%;
+        float: right;
+    }
+}
+
+
 @media (max-width:600px) {
     .nav {
         flex-direction: column;
+        width: initial;
+    }
+
+    .menu.open {
+        display: block;
+        position: absolute;
+        top: 2.6em;
+        left: 0;
+        right: 0;
+        background: white;
+    }
+
+    .menu.close {
+        display: none;
+    }
+
+    .mobilemenubtn {
+        display: block;
+        width: 2em;
+        height: 2em;
+        background: black;
+        color: white;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: .3em;
+    }
+
+    .asdg:focus {
+        outline-offset: 2px;
+        outline: 5px solid -webkit-focus-ring-color;
+        box-shadow: 0 0 2em beige;
     }
 
     .nav span {
         float: right;
+    }
+
+    .ohosublink a {
+        position: relative;
+    }
+
+    .ohosublink a:before {
+        content: '';
+        width: .4em;
+        height: 2px;
+        background: black;
+        position: absolute;
+        left: -.6em;
+        top: 7px;
     }
 
     .submenu_open {
@@ -79,7 +168,9 @@
         max-width: initial;
         top: initial;
         left: initial;
-        margin-top: .6em;
+        margin-top: 1em;
+        box-shadow: none;
+        border-left: 2px solid black;
     }
 
     .menua {
