--- a/styles/timelineone.module.css
+++ b/styles/timelineone.module.css
@@ -30,10 +30,10 @@ li.timelineli:last-child:before {
 
 li.timelineli:after {
     content: "";
-    width: 1em;
-    height: 1em;
+    width: .6em;
+    height: .6em;
     position: absolute;
-    left: -2em;
+    left: -1.75em;
     background: yellow;
     top: 0;
     border: 4px solid hsl(0deg 0% 22% / 82%);
@@ -56,4 +56,35 @@ li.timelineli:after {
 .timelineli p {
     font-size: 14px;
     color: #34495e;
+}
+
+.timelined {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.timelineimgbox img {
+    width: 1em;
+}
+
+.timelineimgbox {
+    margin-right: 1em;
+    position: relative;
+    top: 0px;
+    left: 10px;
+    background: beige;
+    border-radius: 20%;
+    padding: .4em;
+}
+
+.timelined:before {
+    content: "";
+    width: 2px;
+    height: 2em;
+    background: red;
+    position: relative;
+    top: 30px;
+    left: 1.7em;
+    background: black;
 }
