--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,10 +25,20 @@
 
 }
 
+.twogrid {
+    display: grid;
+    grid-template-columns: 48% 48%;
+    gap: 4%;
+}
+
 @media (max-width:600px) {
     .divtwoji {
         width: 100%;
         padding: 1em;
+    }
+
+    .twogrid {
+        display: block;
     }
 
     .magicalcontainer {
